<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="?attr/colorPrimaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"
                android:src="@drawable/password" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="GİRİŞ"
                android:fontFamily="@font/montserratbold"
                android:textColor="#000000"
                android:textSize="35sp"
                android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/tc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="20dp"
            android:hint="T.C Kimlik"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_person_pin_24"
            android:drawablePadding="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:hint="Parola"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_10sdp"/>

        <Button
            android:id="@+id/btnGiris"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:text="@string/giri_yap"
            android:onClick="onClickBtn"
            android:background="@drawable/borderbutton"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserratsemibold"
            tools:ignore="MissingConstraints,OnClick"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:buttonTint="?attr/colorPrimary"
                android:checked="false"
                android:text="@string/beni_hat_rla"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserratregular"/>

            <TextView
                android:id="@+id/forgotpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_70sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="onClickBtn2"
                android:text="@string/ifremi_unuttum"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserratregular"
                tools:ignore="OnClick"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hesab_n_yok_mu"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratsemibold"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:onClick="onClickBtn1"
            android:text="@string/kay_t_ol"
            android:textColor="@color/turunci"
            android:textSize="15sp"
            android:fontFamily="@font/montserratbold"
            tools:ignore="MissingConstraints,OnClick" />

    </LinearLayout>
</LinearLayout>