<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:src="@drawable/signup" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="KAYIT"
            android:fontFamily="@font/montserratbold"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/_10sdp">

        <EditText
            android:id="@+id/ad"
            android:layout_width="@dimen/_125sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:background="@drawable/border"
            android:paddingLeft="20dp"
            android:hint="Ad"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_drive_file_rename_outline_24"
            android:drawablePadding="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/soyad"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            android:paddingLeft="20dp"
            android:hint="Soyad"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_drive_file_rename_outline_24"
            android:drawablePadding="@dimen/_10sdp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            android:hint="Email"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/tc"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            android:inputType="number"
            android:maxLength="11"
            android:paddingLeft="20dp"
            android:hint="T.C Kimlik"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_person_pin_24"
            android:drawablePadding="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/passw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:hint="Parola"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="@dimen/_10sdp"/>

        <EditText
            android:id="@+id/doktorkodu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            android:paddingLeft="20dp"
            android:hint="E-Devlet Doktor Kodu"
            android:fontFamily="@font/montserratsemibold"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/grey"
            android:drawableStart="@drawable/ic_baseline_qr_code_24"
            android:drawablePadding="@dimen/_10sdp"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/border"
            app:boxBackgroundColor="@color/turunci"
            app:endIconTint="@color/grey"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            android:visibility="gone">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:background="@drawable/border"
                android:fontFamily="@font/montserratsemibold"
                android:dropDownSelector="@color/turunci"
                android:text="@string/poliklinikler"
                android:textSize="@dimen/_11sdp"
                android:inputType="none"
                android:paddingTop="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:dropDownHeight="150dp"
                android:textColor="@color/grey"
                android:drawableStart="@drawable/ic_fracture_2_svgrepo_com__1_"
                android:drawablePadding="@dimen/_10sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/doktor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_gravity="end"
            android:gravity="center"
            android:onClick="onClickBtn2"
            android:text="@string/doktor_teyit_etme"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratregular"
            tools:ignore="OnClick"/>

        <Button
            android:id="@+id/btnKayit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_25sdp"
            android:text="@string/kayit_ol"
            android:onClick="onClickBtn"
            android:background="@drawable/borderbutton"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/montserratsemibold"
            tools:ignore="MissingConstraints,OnClick"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginBottom="@dimen/_10sdp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hesab_n_var_m"
            android:textColor="@color/black"
            android:fontFamily="@font/montserratsemibold"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:onClick="onClickBtn1"
            android:text="@string/giri_yap"
            android:textColor="@color/turunci"
            android:textSize="15sp"
            android:fontFamily="@font/montserratbold"
            tools:ignore="MissingConstraints,OnClick" />

    </LinearLayout>

</LinearLayout>