<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfilActivity"
    android:background="?attr/colorPrimaryVariant">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2.">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView1"
                android:layout_width="135dp"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:layout_marginTop="55dp"
                android:src="@drawable/man" />

            <ImageButton
                android:id="@+id/changeImage"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginStart="40dp"
                android:layout_marginTop="-37dp"
                android:background="@drawable/roundimagebutton"
                android:src="@drawable/ic_baseline_file_upload_24"
                android:text="" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Fatih Yıldırım"
                android:fontFamily="@font/kanitmedium"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profilUpdate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_back_white10_20"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/profili_d_zenle"
                android:textAllCaps="false"
                android:textColor="?attr/colorOnSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_secondary_100"
                android:orientation="vertical"
                android:padding="15dp">

                <!--   Gece Modu-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/nightModeIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/moon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/nightModeIcon"
                        android:text="Gece Modu"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/gece"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp" />
                </RelativeLayout>

                <!--   Bildirimler-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/notificationIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/notificationIcon"
                        android:text="@string/bildirimler"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/bildirim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_secondary_100"
                android:orientation="vertical"
                android:padding="15dp">

                <!--   Dil Secimi-->
                <RelativeLayout
                    android:id="@+id/dil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/languageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/ic_baseline_language_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/languageIcon"
                        android:text="@string/dil_se_imi"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrow" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_secondary_100"
                android:orientation="vertical"
                android:padding="15dp">


                <!--   Mesaj-->
                <RelativeLayout
                    android:id="@+id/mesaj"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/messageIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/ic_baseline_message_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/messageIcon"
                        android:text="@string/bize_mesaj_g_nder"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrow" />
                </RelativeLayout>

                <!--   Hakkimizda-->
                <RelativeLayout
                    android:id="@+id/aboutus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <ImageView
                        android:id="@+id/aboutUsIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/ic_baseline_info_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/aboutUsIcon"
                        android:text="@string/hakk_m_zda"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrow" />
                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_back_secondary_100"
                android:orientation="vertical"
                android:padding="15dp">

                <!--   Cikis -->
                <RelativeLayout
                    android:id="@+id/cikis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logoutIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/round_back_night_mode"
                        android:padding="12dp"
                        android:src="@drawable/logout" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/logoutIcon"
                        android:text="@string/k_yap"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_arrow" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_weight="15"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bottom_background"
            android:elevation="2dp"
            app:itemIconSize="30dp"
            app:itemIconTint="@drawable/item_selector"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>